--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,5 +19,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: With the Rank and File
 url: http://www.gutenberg.org/ebooks/50410
